# POLYMARKET-AI-TRADING-BOT

./: README.md
ai-synth-arbitrage-engine/: CONVERSION_NOTES.md  Cargo.toml  README.md  SYNTH_INTEGRATION.md
ai-synth-arbitrage-engine/src/config/: env.rs
ai-synth-arbitrage-engine/src/services/: mod.rs  synth_arbitrage.rs  synth_client.rs
automated-copy-trading-system/: .env.example  .gitignore  Cargo.toml  Makefile  README.md
automated-copy-trading-system/src/: lib.rs  main.rs
automated-copy-trading-system/src/config/: copy_strategy.rs  db.rs  env.rs  mod.rs
automated-copy-trading-system/src/interfaces/: mod.rs
automated-copy-trading-system/src/services/: auto_claim.rs  mod.rs  take_profit_stop_loss.rs  trade_executor.rs  trade_monitor.rs
automated-copy-trading-system/src/utils/: create_clob_client.rs  fetch_data.rs  get_my_balance.rs  health_check.rs  logger.rs  mod.rs  post_order.rs  spinner.rs
automated-copy-trading-system/tests/: test_core_utilities.rs
automated-copy-trading-system/tests/common/: mod.rs
liquidity-provider-bot/: Cargo.toml  Dockerfile  README.md
liquidity-provider-bot/config/: amm.json  bands.json
liquidity-provider-bot/src/: app.rs  args.rs  contracts.rs  market.rs
